<resources>
    <string name="app_name">jobUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="historique">History</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment</string>
    <string name="history_fragment">history fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="open_nav">Opening the navigation drawer</string>
    <string name="close_nav">closing the navigation drawer</string>

    <string name="getstarted">Get Started</string>
    <string name="welcome">Job Up</string>
    <string name="back">back</string>
    <string name="logo">logo</string>
    <string name="editProfile">Edit Profile</string>
    <string name="jobSearcher"> Job Searcher</string>
    <string name="JobOffer"> Job Offer</string>


    <string name="name">NAME : </string>
    <string name="email">EMAIL :</string>
    <string name="phone">PHONE :</string>

    <string name="name_data"></string>
    <string name="email_data"></string>
    <string name="phone_data"></string>


</resources>