<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:id="@+id/profileLayout"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <ScrollView
        android:id="@+id/profileScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileHeaderSection"
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/header_background"
                android:elevation="3dp">

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="154dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="4dp"
                    android:text="User Name"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.185"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.345" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="143dp"
                    android:layout_height="162dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.85"
                    app:layout_constraintStart_toEndOf="@+id/profileName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.372"
                    app:srcCompat="@drawable/ic_profile" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/decorationBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="58dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/HomeBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="HomeButtonClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/HomeImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        app:srcCompat="@drawable/ic_navbar_home" />

                    <TextView
                        android:id="@+id/HomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ProfileBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="ProfileButtonClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/ProfileImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_navbar_account" />

                    <TextView
                        android:id="@+id/ProfileText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emptyButton"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/emptyIamge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/Nothingtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ContactBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="SupportButtonClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/ContactImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_navbar_support" />

                    <TextView
                        android:id="@+id/ContactText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Support"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LogOutBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="LogOutClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/LogOutImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_navbar_logout" />

                    <TextView
                        android:id="@+id/LogOutText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Log Out"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="455dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileScrollView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="102dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="@+id/heyo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/heyo"
            app:layout_constraintTop_toBottomOf="@+id/heyo" />

        <TextView
            android:id="@+id/emailHint"
            android:layout_width="103dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/userPhone"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="@+id/userPhone"
            app:layout_constraintTop_toBottomOf="@+id/userPhone" />

        <TextView
            android:id="@+id/heyo"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/fullNameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullNameInput"
            android:layout_width="154dp"
            android:layout_height="39dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_data"
            app:layout_constraintBottom_toBottomOf="@+id/heyo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toEndOf="@+id/heyo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="156dp"
            android:layout_height="34dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone_data"
            app:layout_constraintBottom_toBottomOf="@+id/userPhone"
            app:layout_constraintEnd_toEndOf="@+id/fullNameInput"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toEndOf="@+id/userPhone"
            app:layout_constraintTop_toBottomOf="@+id/fullNameInput"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/email"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/email_data"
            app:layout_constraintBottom_toBottomOf="@+id/emailHint"
            app:layout_constraintEnd_toEndOf="@+id/fullNameInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="370dp"
            android:layout_height="76dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/jobSearcher"
            android:textColor="@color/my_bleu"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailHint" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="153dp"
            android:layout_height="40dp"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="30dp"
            android:text="@string/editProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.293" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>