<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:id="@+id/profileLayout"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="58dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/HomeBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="HomeButtonClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/HomeImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        app:srcCompat="@drawable/ic_navbar_home" />

                    <TextView
                        android:id="@+id/HomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ProfileBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"

                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/ProfileImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                         />

                    <TextView
                        android:id="@+id/ProfileText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emptyButton"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/emptyIamge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/Nothingtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ContactBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="SupportButtonClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/ContactImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_navbar_support" />

                    <TextView
                        android:id="@+id/ContactText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Support"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LogOutBtn"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="LogOutClicked"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/LogOutImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_navbar_logout" />

                    <TextView
                        android:id="@+id/LogOutText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Log Out"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="455dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="102dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/phone"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/heyo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/heyo"
            app:layout_constraintTop_toBottomOf="@+id/heyo" />

        <TextView
            android:id="@+id/emailHint"
            android:layout_width="103dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/email"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/userPhone"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintStart_toStartOf="@+id/userPhone"
            app:layout_constraintTop_toBottomOf="@+id/userPhone" />

        <TextView
            android:id="@+id/heyo"
            android:layout_width="102dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="Title"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/TitleOfferViewDetails"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TitleOfferViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="title"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/heyo"
            app:layout_constraintStart_toEndOf="@+id/heyo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/emailOfferViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="email"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/emailHint"
            app:layout_constraintEnd_toEndOf="@+id/TitleOfferViewDetails"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/emailHint"
            app:layout_constraintTop_toBottomOf="@+id/PhoneOfferViewDetails"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/descriptionHint"
            android:layout_width="103dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:text="Description :"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/emailHint"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailHint"
            app:layout_constraintTop_toBottomOf="@+id/emailHint" />

        <TextView
            android:id="@+id/DescriptionOfferViewDetails"

            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="desc"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionHint"
            app:layout_constraintStart_toEndOf="@+id/descriptionHint"
            app:layout_constraintTop_toBottomOf="@+id/emailOfferViewDetails" />

        <TextView
            android:id="@+id/PhoneOfferViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:text="phone"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/userPhone"
            app:layout_constraintEnd_toEndOf="@+id/TitleOfferViewDetails"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/userPhone"
            app:layout_constraintTop_toBottomOf="@+id/TitleOfferViewDetails"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="370dp"
        android:layout_height="76dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="80dp"
        android:paddingRight="60dp"
        android:text="@string/JobOffer"
        android:textColor="@color/my_bleu"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>